--- a/Analysis/compare-biometrics-huc8-x.Rmd
+++ b/Analysis/compare-biometrics-huc8-x.Rmd
@@ -2,6 +2,8 @@
 title: "ELF Monthly Comparisons"
 output: word_document
 ---
+#Simulated range and variability of percent loss of taxa for different biometrics
+
 
 ```{r, echo=FALSE}
 # install.packages('gdata')
@@ -34,20 +36,38 @@ save_directory = paste(file_directory,"/",sep='');
 
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
-
-
-# Using 75% value from ymax analysis of all HUC8s
-batch <- rbind(
-  batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_cent')
-)
-
-# Using 75% value from ymax analysis of all HUC8s
-batch <- rbind(
-  batch, data.frame(
     bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
+
+# bpj-rcc
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
 )
+
+# Using 75% value from ymax analysis of all HUC8s
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+)
+
+# Using 75% value from ymax analysis of all HUC8s
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
+)
+
+# darter
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
+)
+
+# Using 75% value from ymax analysis of all HUC8s
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-100', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+)
+
 
 for (row in 1:nrow(batch)) {
   bundle <- batch[row,]$bundle;
