--- a/Analysis/compare-biometrics-huc10-x.Rmd
+++ b/Analysis/compare-biometrics-huc10-x.Rmd
@@ -35,42 +35,41 @@ save_directory = paste(file_directory,"/",sep='');
 # bundle - ecoregion, landunit, watershed
 # ftype - ecoregion_iii, nhd_huc6, nhd_huc6=8, nhd_huc10
 
-# Summary Stats
-ss = data.frame(
-  "Biometric" = character(), 
-  "Med R(all/DA/Qmean)" =  numeric(), 
-  "Count" = character(), 
-  "Criteria" = character(), 
-  stringsAsFactors = FALSE) ;
-
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_total')
 
-# bpj-rcc
+# Minnows
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
 )
 
 # Centrarchids
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_cent')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_benins')
 )
 
 # darter
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_darter')
 )
 
+# Summary Stats
+ss = data.frame(
+  "Biometric" = character(), 
+  "Med R(all/max/DA/Qmean)" =  numeric(), 
+  "Count" = character(), 
+  "Criteria" = character(), 
+  stringsAsFactors = FALSE) ;
 
 for (row in 1:nrow(batch)) {
   bundle <- batch[row,]$bundle;
@@ -105,7 +104,7 @@ for (row in 1:nrow(batch)) {
   # render it
   ymin = 0.0; # restrain plot
   crit_label =  paste('p<', pmax, 'R>', Rmin,sep='')
-  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' (', crit_label, ' of ', tot,' )',sep='')
+  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' (', crit_label, mtch, ' of ', tot,' )',sep='')
   plot_monthly(data, labeltext, xmetric = 'out_rsq_adj', ymetric = metric, ymin=ymin);
   mmax = ceiling(max(data$out_m))
   #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
@@ -121,13 +120,16 @@ for (row in 1:nrow(batch)) {
   #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
   
   # add to summary table
+  
+  mmx = 'tbd'; # max of medians should go here to find month with highest median
   ss <- rbind(
     ss, 
     data.frame(
       "Biometric" = metric, 
-      "Med R(all/DA/Qmean)" = 
+      "Med R(all/max/DA/Qmean)" = 
         paste(
-          round(median(data$out_rsq_adj),2), 
+          round(median(data$out_rsq_adj),2),  
+          mmx, 
           round(median(subset(data, in_xvar == 'nhdp_drainage_sqmi')$out_rsq_adj),2),
           round(median(subset(data, in_xvar == 'erom_q0001e_mean')$out_rsq_adj),2),
           sep="/"
