--- a/Analysis/compare-biometrics-huc10-x.Rmd
+++ b/Analysis/compare-biometrics-huc10-x.Rmd
@@ -37,43 +37,36 @@ save_directory = paste(file_directory,"/",sep='');
 
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_total')
 
-# bpj-rcc
+# Minnows
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
+)
+
+# Centrarchids
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_cent')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
-)
-
-# Using 75% value from ymax analysis of all HUC8s
-batch <- rbind(
-  batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_benins')
 )
 
 # darter
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_darter')
 )
-
-# Using 75% value from ymax analysis of all HUC8s
-batch <- rbind(
-  batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-native', q_ftype = 'fe_elf', metric = 'aqbio_nt_native')
-)
-
 
 # Summary Stats
 ss = data.frame(
   "Biometric" = character(), 
-  'Med R(all/max/DA/Qmean)' =  numeric(), 
+  "Med R(all/max/DA/Qmean)" =  numeric(), 
   "Count" = character(), 
   "Criteria" = character(), 
   stringsAsFactors = FALSE) ;
@@ -105,13 +98,24 @@ for (row in 1:nrow(batch)) {
   data = subset(data, out_m > 0)
   data = subset(data, out_p < pmax); # 
   data = subset(data, out_rsq_adj > Rmin)
+  #***********************
+  # BEGIN - Intersections
+  #***********************
+  # Choose One or NONE of the Two Intersections
+  # only show watersheds in all sets
+  #data = subset(data,containing_hydrocode %in% erom_monthly_intersect(data))
+  # OR only show watersheds in all sets
+  #data = subset(data,containing_hydrocode %in% erom_daq_intersect(data))
+  #***********************
+  # END - Intersections
+  #***********************
   mtch <- nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
   
   #data = subset(data, isheadwater > 0)
   # render it
   ymin = 0.0; # restrain plot
   crit_label =  paste('p<', pmax, 'R>', Rmin,sep='')
-  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' ( p<', pmax, 'R>', Rmin, ' ', mtch, ' of ', tot,' )',sep='')
+  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' (', crit_label, mtch, ' of ', tot,' )',sep='')
   plot_monthly(data, labeltext, xmetric = 'out_rsq_adj', ymetric = metric, ymin=ymin);
   mmax = ceiling(max(data$out_m))
   #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
@@ -122,14 +126,18 @@ for (row in 1:nrow(batch)) {
   ymin = 0.0; # restrain plot
   labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' ( p<', pmax, 'R>', Rmin, ' ', mtch, ' of ', tot,' )',sep='')
   mmax = ceiling(max(data$out_m))
-
+#  plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=ymin, ymax=mmax);
+  
+  #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
+  
   # add to summary table
+  
   mmx = 'tbd'; # max of medians should go here to find month with highest median
   ss <- rbind(
     ss, 
     data.frame(
       "Biometric" = metric, 
-      'Med R(all/max/DA/Qmean)' = 
+      "Med R(all/max/DA/Qmean)" = 
         paste(
           round(median(data$out_rsq_adj),2),  
           mmx, 
@@ -141,10 +149,7 @@ for (row in 1:nrow(batch)) {
       "Criteria" = crit_label, 
       stringsAsFactors = FALSE)
   );
-  
 }
-names(ss) <- c("Biometric",'Med R(all/max/DA/Qmean/Best)',"Count","Criteria");
-
 pander(ss)
 
 ```
