--- a/Analysis/compare-biometrics-huc6-x.Rmd
+++ b/Analysis/compare-biometrics-huc6-x.Rmd
@@ -37,36 +37,42 @@ save_directory = paste(file_directory,"/",sep='');
 
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
 
 # bpj-rcc
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'BenthicPWITupdate', q_ftype = 'fe_pwit', metric = 'aqbio_nt_total')
+)
+
+# bpj-rcc
+batch <- rbind(
+  batch, data.frame(
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
 )
 
 # darter
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-native', q_ftype = 'fe_elf', metric = 'aqbio_nt_native')
+    bundle = 'watershed', ftype = 'nhd_huc6', dataset_tag = 'bpj-huc6-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_native')
 )
 
 
