--- a/Analysis/compare-methods-huc8-x.Rmd
+++ b/Analysis/compare-methods-huc8-x.Rmd
@@ -7,6 +7,7 @@ output: word_document
 # install.packages('gdata')
 options(timeout=2000);
 library('gdata')
+library('pander')
 source("/var/www/R/config.local.private");
 source(paste(base_directory,"Analysis/query_elf_statistics.R", sep = "/")); 
 source(paste(base_directory,"Analysis/plot_elf_statistics.R", sep = "/")); 
@@ -34,13 +35,13 @@ save_directory = paste(file_directory,"/",sep='');
 
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_total')
 
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_cent')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-rcc', q_ftype = 'fe_quantreg', metric = 'aqbio_nt_total')
 )
 
 # Using 75% value from ymax analysis of all HUC8s
@@ -49,53 +50,10 @@ batch <- rbind(
     bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
 )
 
-for (row in 1:nrow(batch)) {
-  bundle <- batch[row,]$bundle;
-  ftype <- batch[row,]$ftype;
-  dataset_tag <- batch[row,]$dataset_tag;
-  q_ftype <- batch[row,]$q_ftype;
-  metric <- batch[row,]$metric;
-  rawdata = fn_dh_elfstats (
-      ftype = q_ftype,
-      site = base_url,
-      analysis_timespan = analysis_timespan,
-      yvar = metric,
-      sampres = sampres, # e.g. species, e.
-      stat_quantreg_qu = quantile, # upper quantile to use
-      feature_ftype = ftype,
-      #stat_quantreg_ghi = stat_quantreg_ghi, #
-      #stat_quantreg_glo = stat_quantreg_glo, # use 1 for pwit, 0 for quantreg
-      dataset_tag = dataset_tag
-  );
-  
-  
-  # filter our data?
-  data = rawdata; # make a copy to start so we can compare raw to filtered if desired
-  tot <- nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
-  #data = subset(data, out_n >= 20)
-  data = subset(data, out_m > 0)
-  data = subset(data, out_p < pmax); # 
-  data = subset(data, out_rsq_adj > Rmin)
-  mtch <- nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
-  
-  #data = subset(data, isheadwater > 0)
-  # render it
-  ymin = 0.0; # restrain plot
-  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' ( p<', pmax, 'R>', Rmin, ' ', mtch, ' of ', tot,' )',sep='')
-  plot_monthly(data, labeltext, xmetric = 'out_rsq_adj', ymetric = metric, ymin=ymin);
-  mmax = ceiling(max(data$out_m))
-  #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
-  plot_monthly_count (data, subname = dataset_tag, xmetric = "out_rsq_adj", 
-  ymin = 0.0, ymax = 1.0)
-  
-  # Show variation in slope
-  ymin = 0.0; # restrain plot
-  labeltext = paste(q_ftype, ":", dataset_tag, '\n', ' ( p<', pmax, 'R>', Rmin, ' ', mtch, ' of ', tot,' )',sep='')
-  mmax = ceiling(max(data$out_m))
-#  plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=ymin, ymax=mmax);
-  
-  #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
-  
-}
+# plots box-whisker and bar charts of R2 for each month/flow/da, returns summary
+ss = elf_monthly_batch_summary(batch)
+
+```{r, echo=FALSE,warning=FALSE,message=FALSE,error=FALSE}
+pander(ss, table.split.table=Inf);
 
 ```
