--- a/Analysis/compare-regions-all-x.Rmd
+++ b/Analysis/compare-regions-all-x.Rmd
@@ -9,9 +9,10 @@ options(timeout=2000);
 library('gdata')
 source("/var/www/R/config.local.private");
 source(paste(base_directory,"Analysis/query_elf_statistics.R", sep = "/")); 
+source(paste(base_directory,"Analysis/plot_elf_statistics.R", sep = "/"));  
 base_url <- 'http://deq2.bse.vt.edu/d.dh'
 
-metric <- 'aqbio_nt_cent'; # aqbio_nt_total, aqbio_nt_cent, aqbio_nt_darter, aqbio_nt_benins
+metric <- 'aqbio_nt_total'; # aqbio_nt_total, aqbio_nt_cent, aqbio_nt_darter, aqbio_nt_benins
 q_ftype <- "fe_quantreg";
 dataset_tag = 'bpj-530'; # bpj-530, bpj-rcc, 'HUC8_quantregwHuc6bp' (huc 6)
 analysis_timespan = "full";
@@ -39,7 +40,7 @@ batch <- rbind(
     bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg'))
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_quantreg'))
+    bundle = 'watershed', ftype = 'nhd_huc10', dataset_tag = 'bpj-530', q_ftype = 'fe_elf'))
 
 for (row in 1:nrow(batch)) {
   bundle <- batch[row,]$bundle;
@@ -63,14 +64,17 @@ for (row in 1:nrow(batch)) {
   # filter our data?
   data = rawdata; # make a copy to start so we can compare raw to filtered if desired
   #data = subset(data, out_n >= 20)
+  tot <- nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
   data = subset(data, out_m > mmin)
   data = subset(data, out_p < pmax); # 
   data = subset(data, out_rsq_adj > Rmin)
-  nda = nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
-  #data = subset(data, isheadwater > 0)
-  # render it
   ymin = 0.0; # restrain plot
-  labeltext = paste('( p<', pmax, ', R>', Rmin, ', m>', mmin, 'n(da) =', nda,' )',sep='')
+  mtch <- nrow(subset(data, in_xvar == 'nhdp_drainage_sqmi'))
+  
+  # ALL
+  labeltext = paste(q_ftype, ":", dataset_tag, '\n', '(ALL', mtch, ' of ', tot,' )',sep='')
+  ymin = 0.0; # restrain plot
+  #labeltext = paste('( p<', pmax, ', R>', Rmin, ', m>', mmin, 'n(da) =', nda,' )',sep='')
   plot_monthly(data, labeltext, xmetric = 'out_rsq_adj', ymetric = metric, ymin=ymin);
   mmax = ceiling(max(data$out_m))
   #plot_monthly(data, labeltext, xmetric = 'out_m', ymetric = metric, ymin=0, ymax=mmax);
